--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase-admin": "^11.10.1",
     "lucide-react": "^0.271.0",
     "luxon": "^3.4.3",
+    "nanoid": "^4.0.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
