--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
