--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "yup": "^1.2.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.2",
